# complex-task-gen

./: .gitignore  Evaluation Labels.csv  LICENSE  Math Question Evaluation QA Pairs.csv  README.md  Subset 100 Evaluation Labeled.csv  pyproject.toml  testing.py
actual_project/: constants.py
actual_project/config/: output.py
actual_project/config/train/: training_config.py
actual_project/graphs/: correlation_plot.py
actual_project/models/: finetuned_model.py
actual_project/pipelines/: evaluation_pipeline.py  evaluation_pipeline_transformer_nochat.py  evaluation_pipeline_transformers.py  evaluation_pipeline_v2.py  finetune_pipeline.py  finetune_pipeline_gsm8k.py  finetune_pipeline_qwen.py  generate_answers.py  gsm_evaluation_dataset_creation.py  learning_curve_eval.py  model_evaluation.py  model_training.py  novelty_augmentation.py  output_processing.py
actual_project/pipelines/augmentation/: augment_concurrently.py  augmentation_pipeline.py  augmentation_pipeline_v2.py  augmentation_pipeline_v3.py  augmentation_prompts.py  code_augmentation.py  test.csv
actual_project/pipelines/augmentation/old/: augment_concurrently.py  augmentation_pipeline_reasoning.py  augmentation_pipeline_v2.py  augmentation_pipeline_v3.py  novelty_score.py
actual_project/pipelines/eval/: augmentation_evaluation.ipynb  model_evaluation.ipynb
actual_project/pipelines/probability_calculations/: correlation_coefficient_pipeline.py  correlation_new_metrics.py  correlations_concurrently.py  evaluation.py  length_normalized_logp.ipynb  logp_utils.py  main.py  main_concurrently.py
actual_project/util/: dataset_tools.py  training_utils.py
literature/: pyproject.toml
literature/src/: test.py
machine_learning/: pyproject.toml
machine_learning/src/: main.py  test.py
models/: llama_3_2.sh  qwen_2_15.sh  qwen_2_7b_math_fp.sh
models/model_files/: llama3.2_ModelFile  qwen2_1_5b.ModelFile  qwen2_7b_math_fp_ModelFile
src/analytics/: log_probabilities_pass_k.py.ipynb
src/analytics/visualisation/: requirements.txt  token_probabilities.py
src/assignments/: EDA.ipynb
src/augmentation_pipeline/: initial_test.py  test_full_reward_model_pipeline.py
src/client/: openai_client.py  zotero_client.py
src/literature/: constants.py  main.py
src/machine_learning/: constants.py  main.py  models.py  prompts.py  readme.md  requirements.txt  util.py
src/machine_learning/evaluation/: evaluate_pass_k_log_p.py  log_probability.py  pass_k.py  validity.py
src/machine_learning/models/: base_camel.py  constants.py  deepseek_r1.py  llama_3_2_3B.py  model_factory.py  qwen_2_math_7b.py  tokenizer.py
src/machine_learning/models/base_models/: base_camel.py  constants.py  deepseek_chat.py  deepseek_r1.py  deepseek_v3.py  qwen_2_15b.py  qwen_2_math_7b.py  tokenizer.py  vllm_implementation.ipynb
src/machine_learning/notebooks/: log_p_pass_k_evaluation.ipynb  sample_aug.ipynb
src/machine_learning/notebooks/CoT/: qwen_unsloth.ipynb
src/machine_learning/pipeline/: constants.py  log_probability_pipeline.py  pipeline.py  prediction_pipeline.py  util.py
src/machine_learning/pipeline/evaluation/: log_probability.py  pass_k.py
src/machine_learning/pipeline/models/: base_camel.py  deepseek_camel.py  deepseek_r1.py  llama_3_2_3B.py  (+3 more)
src/machine_learning/research_datasets/: base_dataset.py  downloaded_gsm8k_10.json  gsm8k_dataset.py  gsm_symbolic.py  math_500_dataset.py  math_dataset.py
(+3 files in other folders)
