[tool.poetry]
name = "machine_learning"
version = "0.1.0"
description = "Machine learning module for complex-task-gen"
authors = ["Mannes Mokkenstorm <mannesm@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.2.0"
numpy = "^1.22.0"
camel-ai = "0.2.16"
unsloth = "*"
python-dotenv = "^0.19.1"
openai = "^1.4.0"
pyzotero = "*"
pandas = "^1.4.0"
plotly = "*"
dash = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "machine_learning"
from = "src"