[project]
name = "machine_learning"
version = "0.1.0"
description = "Machine learning module for complex-task-gen"
authors = [{name = "Mannes Mokkenstorm"}]
requires-python = ">=3.11,<4.0"

dependencies = [
    "scikit-learn>=1.2.0,<2.0",
    "numpy>=1.22.0,<2.0",
    "camel-ai==0.2.16",
    "unsloth",
    "python-dotenv>=0.19.1,<1.0",
    "openai>=1.4.0,<2.0",
    "pyzotero",
    "pandas>=1.4.0,<2.0",
    "plotly",
    "dash",
    "uvicorn>=0.22.0,<1.0",
    "seaborn",
    "polars>=1.22.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.uv.virtualenvs]
in-project = true
