[project]
name = "complex_task_gen"
version = "0.1.0"
description = "Machine learning module for complex-task-gen"
authors = [{ name = "Mannes Mokkenstorm" }]
requires-python = ">=3.11,<4.0"

dependencies = [
    "scikit-learn>=1.2.0,<2.0",
    "python-dotenv>=0.19.1,<1.0",
    "pyzotero",
    "plotly",
    "dash",
    "uvicorn>=0.22.0,<1.0",
    "seaborn",
    "polars>=1.22.0",
    "vllm>=0.8.4",
    "torch>=2.6.0",
    "transformers>=4.40.0",
    "tf-keras>=2.18.0",
    "datasets>=3.6.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.uv.virtualenvs]
in-project = true
[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true