[tool.poetry]
name = "machine_learning"
version = "0.1.0"
description = "Machine learning module for complex-task-gen"
authors = ["Mannes Mokkenstorm <mannesm@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.2.0"
numpy = "^1.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[[tool.poetry.packages]]
include = "machine_learning"
from = "src"
